Changed to use cleveref, some typo fixes

--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -10,7 +10,7 @@
     title = {{Agda S-expression Extractor}},
     howpublished = {\url{
                     https://github.com/andrejbauer/agda/tree/release-2.7.0.1-sexp?tab=readme-ov-file
-                    },},
+                    }},
 }
 
 % graph buddy, visualize the graph of classes, objects and definitions for Java
@@ -689,7 +689,7 @@
 @software{agda_html,
     author = {{Julian Vidal}},
     month = sep,
-    title = {{AGDA_HTML}},
+    title = {{AGDA HTML}},
     url = {https://github.com/JulianVidal/AGDA_HTML},
     year = {2025},
 }
