Proof reading some chapters

--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -30,7 +30,7 @@
 }
 
 % Developers benefit from a tool that answers the reachability question
-@inproceedings{6062086,
+@inproceedings{reachability,
     author = {LaToza, Thomas D. and Myers, Brad A.},
     booktitle = {2010 ACM/IEEE 32nd International Conference on Software
                  Engineering},
@@ -301,7 +301,7 @@
 }
 
 % Code keeps increasing in size and complexity, more difficult to understand and use must do some refactoring.
-@article{5388088,
+@article{code_decay,
     author = {Belady, L. A. and Lehman, M. M.},
     journal = {IBM Systems Journal},
     title = {A model of large program development},
@@ -323,7 +323,7 @@
 
 
 % A dependency graph being used for refactoring
-@inproceedings{10.1145/1159733.1159777,
+@inproceedings{dep_grah_refactoring,
     author = {Counsell, S. and Hassoun, Y. and Loizou, G. and Najjar, R.},
     title = {Common refactorings, a dependency graph and some code smells: an
              empirical study of Java OSS},
