More proof reading

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -55,6 +55,7 @@
 \include{Preamble/Abstract}
 \todo[inline]{Add an introduction of what you want to do for each chapter}
 \todo[inline]{Proof read}
+\todo[inline]{PDF word counter shows about 15,000 words, is that a problem?problem}
 
 %\include{Preamble/Dedication} % Comment out for UG dissertations
 \include{Preamble/Acknowledge}
