--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -665,31 +665,31 @@
 @misc{type-topology,
     title = {{TypeTopology}},
     author = {Escard\'{o}, Mart\'{i}n H. and {contributors}},
-    url = {https://github.com/martinescardo/TypeTopology},
+    howpublished = {\url{ https://github.com/martinescardo/TypeTopology }},
     note = {{Agda} development},
 }
 
-@software{agda-unimath,
+@misc{agda-unimath,
     author = {Rijke, Egbert and Stenholm, Elisabeth and Prieto-Cubides, Jonathan
               and Bakke, Fredrik and {others}},
     license = {MIT},
     title = {{The agda-unimath library}},
-    url = {https://github.com/UniMath/agda-unimath/},
+    howpublished = {\url{ https://github.com/UniMath/agda-unimath/ }},
 }
 
-@software{stdlib,
+@misc{stdlib,
     author = {{The Agda Community}},
     month = sep,
     title = {{Agda Standard Library}},
-    url = {https://github.com/agda/agda-stdlib},
+    howpublished = {\url{ https://github.com/agda/agda-stdlib }},
     version = {2.1.1},
     year = {2024},
 }
 
-@software{agda_html,
+@misc{agda_html,
     author = {{Julian Vidal}},
     month = sep,
     title = {{AGDA HTML}},
-    url = {https://github.com/JulianVidal/AGDA_HTML},
+    howpublished = {\url{ https://github.com/JulianVidal/AGDA_HTML }},
     year = {2025},
 }
