changed some formatting

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -53,15 +53,14 @@
 \listoftodos
 \include{Preamble/Frontpage}
 \include{Preamble/Abstract}
-\todo[inline]{Add an introduction of what you want to do for each chapter}
-\todo[inline]{Proof read}
-\todo[inline]{PDF word counter shows about 15,000 words, is that a problem?problem}
+\todo[inline]{Word count ~ 12,500}
+\todo[inline]{Should I format Python library names differently?}
 
 %\include{Preamble/Dedication} % Comment out for UG dissertations
 \include{Preamble/Acknowledge}
 %\include{Preamble/Declarations} % Comment out for UG dissertations
 %\include{Preamble/Sponsors} % Comment out for UG dissertations
-\include{Preamble/Abbreviations}
+% \include{Preamble/Abbreviations}
 %\include{Preamble/Notations} % Comment out for most dissertations 
 \include{Preamble/Contents}
 \include{Preamble/Lists}
@@ -81,6 +80,7 @@
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
 
+\appendix
 \include{Appendices/Appendices}
 
 \end{document}
