--- a/reports/Final_Report/Preamble/Acknowledge.tex
+++ b/reports/Final_Report/Preamble/Acknowledge.tex
@@ -1,3 +1,9 @@
 
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
+
+I would like to express my gratitude to Andrej Bauer, the creator of the Agda
+s-expression extractor, and Job Petrovčič for their invaluable assistance in
+helping me use and understand the extractor. Their guidance contributed
+significantly to the overall success of this thesis. Their expertise and
+support have been greatly appreciated.
