Draft sent to supervisor

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -53,8 +53,9 @@
 \listoftodos
 \include{Preamble/Frontpage}
 \include{Preamble/Abstract}
-\todo[inline]{Word count ~ 12,500}
+\todo[inline]{Word count ~ 9,900}
 \todo[inline]{Should I format Python library names differently?}
+\todo[inline]{Should python libraries be cited?}
 
 %\include{Preamble/Dedication} % Comment out for UG dissertations
 \include{Preamble/Acknowledge}
