Added suggestions from meeting

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -50,12 +50,9 @@
 
 \begin{document}
 
-\listoftodos
+% \listoftodos
 \include{Preamble/Frontpage}
 \include{Preamble/Abstract}
-\todo[inline]{Word count ~ 9,900}
-\todo[inline]{Should I format Python library names differently?}
-\todo[inline]{Should python libraries be cited?}
 
 %\include{Preamble/Dedication} % Comment out for UG dissertations
 \include{Preamble/Acknowledge}
@@ -81,7 +78,7 @@
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
 
-\appendix
-\include{Appendices/Appendices}
+% \appendix
+% \include{Appendices/Appendices}
 
 \end{document}
