--- a/reports/Final_Report/Preamble/Frontpage.tex
+++ b/reports/Final_Report/Preamble/Frontpage.tex
@@ -8,12 +8,13 @@
 	\end{center}
 	\vspace{10mm}
 	\begin{center}
-		\textbf{\Large Create and Explore a graph from Agda Definitions to
-		analyse projects and speed up compilation}
+		\textbf{\Large Tools for Generating and Exploring Agda's Definition and
+			Module Dependency Graphs for Better Code Comprehension and Parallel
+		Type-Checking}
 		\vspace{10mm}
 	\end{center}
 	\begin{center}
-		\textbf{\large Dissertation}
+		\textbf{\large Undergraduate Final Year Project}
 		\vspace{20mm}
 		\\\textbf{\Large Julian Camilo Vidal Polania}
 		\vspace{30mm}
